Correct some Spanish language items.

--- a/data/i18n/collection_es.xml
+++ b/data/i18n/collection_es.xml
@@ -147,7 +147,7 @@
     <msg key="series">Colección</msg>
     <msg key="editionSeries">La Escuela de Salamanca. Una Colección Digital de Fuentes</msg>
     <msg key="editorsInChief">Directores de la colección</msg>
-    <msg key="digitalPublication">Publicación electronica</msg>
+    <msg key="digitalPublication">Publicación electrónica</msg>
     <msg key="biblInfo">Información bibliográfica</msg>
     <msg key="editionInfo">Edición digital</msg>
     <msg key="pubYear">Año de publicación</msg>
@@ -157,12 +157,12 @@
     <msg key="notPublished">Aún no publicado</msg>
     <msg key="digitizedBy">Digitalizado por</msg>
     <msg key="workViews">Vistas para esta obra</msg>
-    <msg key="volViews">Vistas para este volumen</msg>
-    <msg key="textViews">Vistas para este texto</msg>
+    <msg key="volViews">Vistas del volumen</msg>
+    <msg key="textViews">Vistas del texto</msg>
     <msg key="readingView">Vista de texto e imágenes</msg>
-    <msg key="facsimilesLink">Facsimiles</msg>
+    <msg key="facsimilesLink">Facsímiles</msg>
     <msg key="metadata">Metadatos</msg>
-    <msg key="teiHeader">Cabezado TEI</msg>
+    <msg key="teiHeader">Encabezado TEI</msg>
     <msg key="scans">Escaneados</msg>
     <msg key="notAvailable">No disponible</msg>
     <msg key="notFullyAvailable">No disponible</msg> <!-- omitted "(completamente)" due to lack of space -->
